--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/common": "^7.2.0",
     "@angular/compiler": "^7.2.0",
     "@angular/core": "^7.2.0",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "^7.2.0",
     "@angular/http": "^7.2.0",
     "@angular/platform-browser": "^7.2.0",
@@ -43,6 +44,7 @@
     "bootstrap": "^4.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.2",
+    "firebase": "^5.8.0",
     "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.23.0",
