🙌 Teacehr Profile completed

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "includePaths": ["./node_modules"]
             },
             "scripts": [
-              "node_modules/chart.js/dist/Chart.min.js"
+              "node_modules/chart.js/dist/Chart.min.js",
+              ""
             ]
           },
           "configurations": {
