illegal operation error removed-angular.json-empty path in "scripts" --debugged by Talha Khan 💘

--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,7 @@
               "includePaths": ["./node_modules"]
             },
             "scripts": [
-              "node_modules/chart.js/dist/Chart.min.js",
-              ""
+              "node_modules/chart.js/dist/Chart.min.js"
             ]
           },
           "configurations": {
