--- a/package.json
+++ b/package.json
@@ -44,14 +44,17 @@
     "bootstrap": "^4.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.2",
+    "enhanced-resolve": "^4.1.0",
     "firebase": "^5.8.0",
     "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "moment": "^2.23.0",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-perfect-scrollbar": "^7.2.0",
+    "popper.js": "^1.14.6",
     "rxjs": "^6.3.3",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "^1.1.2",
