✔ Academyadmin-routing.module.ts added

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@coreui/coreui": "^2.1.6",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
+    "@ngxs/devtools-plugin": "^3.3.4",
+    "@ngxs/logger-plugin": "^3.3.4",
+    "@ngxs/store": "^3.3.4",
     "bootstrap": "^4.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.2",
