--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "@coreui/coreui": "^2.1.6",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
-    "@ngxs/devtools-plugin": "^3.3.4",
-    "@ngxs/logger-plugin": "^3.3.4",
-    "@ngxs/store": "^3.3.4",
+    "@ngxs/devtools-plugin": "^3.3.2",
+    "@ngxs/logger-plugin": "^3.3.2",
+    "@ngxs/schematics": "0.0.1-alpha.5",
+    "@ngxs/store": "^3.3.2",
     "bootstrap": "^4.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.2",
@@ -72,6 +73,7 @@
     "@angular/cli": "^7.2.1",
     "@angular/compiler-cli": "^7.2.0",
     "@angular/language-service": "^7.2.0",
+    "@ngxs/schematics": "^0.0.1-alpha.5",
     "@types/jasmine": "^3.3.5",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^10.12.18",
