✔ re-stashing chnages to put on commit

--- a/package.json
+++ b/package.json
@@ -47,12 +47,19 @@
     "@ngxs/logger-plugin": "^3.3.2",
     "@ngxs/schematics": "0.0.1-alpha.5",
     "@ngxs/store": "^3.3.2",
+    "angular-calendar": "^0.26.6",
+    "angular-draggable-droppable": "^4.1.0",
+    "angular-resizable-element": "^3.2.3",
+    "angularx-flatpickr": "^6.1.0",
     "bootstrap": "^4.2.1",
+    "calendar-utils": "^0.2.3",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.2",
+    "date-fns": "^1.30.1",
     "enhanced-resolve": "^4.1.0",
     "firebase": "^5.8.0",
     "flag-icon-css": "^3.2.1",
+    "flatpickr": "^4.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "moment": "^2.23.0",
@@ -61,6 +68,7 @@
     "ngx-bootstrap": "^3.1.4",
     "ngx-perfect-scrollbar": "^7.2.0",
     "popper.js": "^1.14.6",
+    "rrule": "^2.6.0",
     "rxjs": "^6.3.3",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "^1.1.2",
