--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@coreui/coreui": "^2.1.6",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
+    "@ngxs/devtools-plugin": "^3.4.3",
+    "@ngxs/logger-plugin": "^3.4.3",
+    "@ngxs/store": "^3.4.3",
     "angular-calendar": "^0.26.6",
     "angular-draggable-droppable": "^4.1.0",
     "angular-resizable-element": "^3.2.3",
