--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.0",
-    "@angular/cdk": "~7.2.2",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "^7.2.0",
     "@angular/compiler": "^7.2.0",
     "@angular/core": "^7.2.0",
@@ -43,9 +43,11 @@
     "@coreui/coreui": "^2.1.6",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
+    "@kolkov/angular-editor": "^0.13.1",
     "@ngxs/devtools-plugin": "^3.4.3",
     "@ngxs/logger-plugin": "^3.4.3",
     "@ngxs/store": "^3.4.3",
+    "@types/quill": "^2.0.2",
     "angular-calendar": "^0.26.6",
     "angular-draggable-droppable": "^4.1.0",
     "angular-resizable-element": "^3.2.3",
@@ -67,6 +69,7 @@
     "ngx-bootstrap": "^3.1.4",
     "ngx-perfect-scrollbar": "^7.2.0",
     "popper.js": "^1.14.6",
+    "quill": "^1.3.6",
     "rrule": "^2.6.0",
     "rxjs": "^6.3.3",
     "simple-line-icons": "^2.4.1",
@@ -76,7 +79,7 @@
     "zone.js": "^0.8.27"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.1",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.2.1",
     "@angular/compiler-cli": "^7.2.0",
     "@angular/language-service": "^7.2.0",
