--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-perfect-scrollbar": "^7.2.0",
+    "node-sass": "^4.11.0",
     "popper.js": "^1.14.6",
     "quill": "^1.3.6",
     "rrule": "^2.6.0",
