--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.1.4",
+    "ngx-datatable": "^1.0.3",
     "ngx-perfect-scrollbar": "^7.2.0",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.6",
