quiz auto checking

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "flatpickr": "^4.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "jspdf": "^1.5.3",
     "moment": "^2.23.0",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "^1.6.0",
