--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "moment": "^2.23.0",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "^1.6.0",
+    "ng6-countdown": "^1.0.2",
     "ngx-bootstrap": "^3.1.4",
     "ngx-datatable": "^1.0.3",
     "ngx-perfect-scrollbar": "^7.2.0",
